--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.3.0-beta3
+** new commands readkey, newkmap, delkmap, definekey
+These commands operate on the new feature: keymaps. They allow you to
+have nested keymaps.
+
 * Changes since 1.3.0-beta2
 ** new command gdelete
 Delete a group.
