--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -486,6 +486,10 @@ Run when the user switches to another frame. This is also run when the
 user switches to a different screen, since a frame switch also occurs.
 @item switchgroup
 Run when the user switches to a different group.
+@item quit
+Run when ratpoison exits.
+@item restart
+Run when ratpoison restarts.
 @end table
 
 @end deffn
