--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.3.0-beta3
+** new configure option --disable-history
+
 ** new commands readkey, newkmap, delkmap, definekey
 These commands operate on the new feature: keymaps. They allow you to
 have nested keymaps.
