* contrib/rpshowall.sh: store ratpoison binary location in RATPOISON env var.
* src/ratpoison.h (FD_CLOEXEC): new define
(set_close_on_exec): new prototype

* src/main.c (ratpoison_longopts): add "interactive" option.
(ratpoison_opts): likewise
(print_help): print a help line for interactive option.
(set_close_on_exec): new function
(read_startup_files): call set_close_on_exec on file pointer
(main): parse interactive command line option and pass it to
send_command.

* src/events.c (execute_remote_command): pass the interactive bit
to command.

* src/communications.c (send_command): send an interactive bit at
the beginning of the message. Take an interactive argument. All
callers updated. Prototype updated.

* src/actions.c (cmd_source): call set_close_on_exec on file pointer.

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,3 +28,4 @@ Rupert <rupert.debian@hotpop.com>
 Tim Goodwin <tjg@star.le.ac.uk>
 Joshua Neuheisel <jneuheisel@msn.com>
 Thien-Thi Nguyen <ttn@glug.org>
+Joshua Neuheisel <jneuheisel@msn.com>
