--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -1248,6 +1248,10 @@ $ ratpoison -c split -c split
 
 Here ratpoison would split the current frame twice.
 
+@item -i, --interactive
+Force ratpoison to execute commands in interactive mode. This is used
+in conjuction with the @option{-c} option.
+
 @end table
 
 @node Startup file, Command Index, Command Line Arguments, Top
