--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-22  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* contrib/Makefile.am (pkgdata_DATA): add rpshowall.sh
+	(EXTRA_DIST): likewise
+
 2003-11-17  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* contrib/rpshowall.sh: store ratpoison binary location in
