(ratpoison_longopts): add "file" (ratpoison_opts): add f: option (print_help): print help for --file option (read_startup_files): take an alternative rc file as an argument and use it if it is non-NULL. (main): parse the --file option. pass alt_rcfile to read_startup_files.

--- a/AUTHORS
+++ b/AUTHORS
@@ -29,3 +29,4 @@ Tim Goodwin <tjg@star.le.ac.uk>
 Joshua Neuheisel <jneuheisel@msn.com>
 Thien-Thi Nguyen <ttn@glug.org>
 Joshua Neuheisel <jneuheisel@msn.com>
+Sylvain BEUCLER <beuc@beuc.net>
