--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -492,6 +492,9 @@ Display the version
 .TP
 .B \-c \fIcmd\fP, \-\-command \fIcmd\fP
 Send ratpoison a colon\-command.
+.TP
+.B \-f \fIfilename\fP, \-\-file \fIfilename\fP
+Specify an alternate configuration file.
 .SH FILES
 .TP
 .B /etc/ratpoisonrc
