--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -1252,6 +1252,9 @@ Here ratpoison would split the current frame twice.
 Force ratpoison to execute commands in interactive mode. This is used
 in conjuction with the @option{-c} option.
 
+@item -f, --file
+Specify an alternate configuration file. @xref{Startup file}.
+ 
 @end table
 
 @node Startup file, Command Index, Command Line Arguments, Top
@@ -1269,6 +1272,10 @@ the command parser. If @file{~/.ratpoisonrc} does not exist, ratpoison
 tries @file{/etc/ratpoisonrc}. This means any command you can bind a key
 to or run at the command prompt (@kbd{C-t :}) you can execute in this rc
 file.
+
+You can also use the @option{-f} option to specify another startup
+file, allowing you to switch between different configurations
+(@pxref{Command Line Arguments}).
 
 @node Command Index,  , Startup file, Top
 @unnumbered Command Index
