*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -30,3 +30,4 @@ Joshua Neuheisel <jneuheisel@msn.com>
 Thien-Thi Nguyen <ttn@glug.org>
 Joshua Neuheisel <jneuheisel@msn.com>
 Sylvain BEUCLER <beuc@beuc.net>
+Cameron Patrick <cameron@patrick.wattle.id.au>
