--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.3.0-rc2
+** Xinerama support
+Each xinerama screen is handled as X11 screens normally are. The only
+different is that each xinerama screen can select from all the
+managed windows.
+
 * Changes since 1.3.0-rc1
 ** new command-line option --file
 Used to specify an alternate configuration file.
