--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-01  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* configure.in: fix check for Xinerama.h
+
 2004-02-27  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/screen.c (screen_free_nums): new function. prototype added
