--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-04-03  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* src/main.c (init_defaults): init frame_selectors.
+
+	* src/data.h (struct rp_defaults): new field, frame_selectors.
+
+	* src/actions.h (cmd_defframesels): new prototype
+
+	* src/actions.c (user_commands): new command defframesels
+	(frame_selector): new function
+	(frame_selector_match): likewise
+	(cmd_defframesels): likewise
+	(cmd_fselect): use default.frame_selectors to select a frame.
+
 2004-03-01  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* configure.in: fix check for Xinerama.h
