--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.3.0-rc2
+** new command defframesels
+Allow you to customize the keys used to select frames with fselect.
+
 ** Xinerama support
 Each xinerama screen is handled as X11 screens normally are. The only
 different is that each xinerama screen can select from all the
