--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.3.0-rc2
+** hsplit and vsplit switched
+To be compatible with emacs these command names have been
+switched. The bindings are the same but custom scripts and aliases
+will have to make the switch.
+
 ** new command defframesels
 Allow you to customize the keys used to select frames with fselect.
 
