--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -691,7 +691,7 @@ Display @var{text} as a message.
 @end deffn
 
 @deffn Command escape @var{key}
-Set the prefix to to @var{key}. For example @samp{escape C-b} sets the
+Set the prefix to @var{key}. For example @samp{escape C-b} sets the
 prefix key to @key{C-b}.
 @end deffn
 
@@ -998,8 +998,8 @@ Read a text file containing ratpoison commands.
 @end deffn
 
 @deffn Command split @var{n}
-@deffnx Command hsplit @var{n}
-Split the current frame horizontally in two. The last accessed window
+@deffnx Command vsplit @var{n}
+Split the current frame vertically in two. The last accessed window
 not occupying a frame will be the second window.
 
 @var{n} is either a fraction of the form @code{x/y} or a number. If it
@@ -1072,8 +1072,8 @@ message saying command was executed.
 Print ratpoison version.  By default, this is bound to @kbd{C-t v}.
 @end deffn
 
-@deffn Command vsplit @var{n}
-Split the current frame vertically in two. The last accessed window
+@deffn Command hsplit @var{n}
+Split the current frame horizontally in two. The last accessed window
 not occupying a frame will be the second window.
 
 @var{n} is either a fraction of the form @code{x/y} or a number. If it
