--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.3.0-rc2-beta1
+** New command 'set'
+set replaces the def* commands. For example 'defwinliststyle column'
+is now 'set winliststyle column'.
+
+The old def* commands now alias to their 'set' version.
+
 * Changes since 1.3.0-rc1
 ** Top level keymap
 The keymap named 'top' is now a top level keymap. No prefix key need
